# python-project-83

./: .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build-push.yml  github_actions.yml
docker-entrypoint-initdb.d/: init-user-db.sql
page_analyzer/: app.py  db.py  db_methods.py  html.py  normalize.py  soap.py  time_normalize.py  validator.py
page_analyzer/templates/: 404.html  500.html  505.html  all_urls.html  base.html  index.html  url.html
tests/: conftest.py  test_app.py
tests/fixtures/: url.py
